<resources>
    <string name="app_name">Felix store</string>
    <string name="api_base_url">http://10.0.0.5:1337/</string>
    <string name="btn_login">Login</string>
    <string name="txt_emailPlaceholder">E-mail</string>
    <string name="txt_passwordPlaceholder">Password</string>
    <string name="access_token_key">access_token_key</string>
    <string name="product_image_content_description">This is the image of the product</string>
    <string name="product_sku">Sku:</string>
    <string name="product_model">Model:</string>
    <string name="product_name">Name:</string>
    <string name="product_type">Type:</string>
    <string name="product_price">Price:</string>
    <string name="product_price_value_example">000.00</string>
    <string name="product_description">Description:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_products_title">All products</string>
    <string name="create_product_title">Create product</string>
    <string name="sign_out_title">Sign out</string>
    <string name="login_image_content_description">This is the app logo in the login</string>
    <string name="registration_label">You don\'t have an account? Sign up here</string>
    <string name="product_count_title">Total products:</string>
    <string name="home_string">Home</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="return_to_login">Return to login</string>
    <string name="product_sku_create">Sku</string>
    <string name="product_name_create">Name</string>
    <string name="sign_out">Sign out</string>
    <string name="product_type_create">Type</string>
    <string name="product_upc_create">Upc</string>
    <string name="product_price_create">Price</string>
    <string name="product_shipping_create">Shpping cost</string>
    <string name="product_description_create">Description</string>
    <string name="product_manufacturer_create">Manufacturer</string>
    <string name="product_model_create">Model</string>
    <string name="product_url_create">Url</string>
    <string name="product_image_create">Image Url</string>
    <string name="product_categories_create">Category</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="product_value_example"></string>
    <string name="product_value_example_string" />
    <string name="product_update_title">Update product</string>
    <string name="product_delete">Delete</string>
    <string name="product_update_button">Update</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="value_0">0</string>
    <string name="welcome_sign">Welcome, consolestrapi</string>
</resources>