<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemMainPage"
            android:icon="@drawable/ic_home"
            android:title="@string/home_string"/>
        <item
            android:id="@+id/navItemAllProducts"
            android:icon="@drawable/ic_all_products"
            android:title="@string/all_products_title" />
        <item
            android:id="@+id/navItemCreateProduct"
            android:icon="@drawable/ic_add"
            android:title="@string/create_product_title" />
<!--        <item
            android:id="@+id/navItemDraft"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/draft" />
        <item
            android:id="@+id/navItemTrash"
            android:icon="@drawable/ic_delete_forever"
            android:title="@string/trash" />

        <item
            android:id="@+id/navItemSettings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />-->
    </group>
</menu>