<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_item_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_product_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_content_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/product_image_content_description"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textview_sku_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_sku"
                app:layout_constraintStart_toEndOf="@+id/imageview_product"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_model_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_model"
                app:layout_constraintStart_toEndOf="@+id/imageview_product"
                app:layout_constraintTop_toBottomOf="@+id/textview_sku_title" />

            <TextView
                android:id="@+id/textview_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_name"
                app:layout_constraintStart_toEndOf="@+id/imageview_product"
                app:layout_constraintTop_toBottomOf="@+id/textview_model_title" />

            <TextView
                android:id="@+id/textview_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_type"
                app:layout_constraintStart_toEndOf="@+id/imageview_product"
                app:layout_constraintTop_toBottomOf="@+id/textview_name_value" />

            <TextView
                android:id="@+id/textview_sku_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_value_example_string"
                app:layout_constraintStart_toEndOf="@+id/textview_sku_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_model_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_value_example_string"
                app:layout_constraintStart_toEndOf="@+id/textview_model_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_sku_value" />

            <TextView
                android:id="@+id/textview_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:minLines="1"
                android:singleLine="false"
                android:text="@string/product_value_example_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_name_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_model_value" />

            <TextView
                android:id="@+id/textview_type_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/product_value_example_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_type_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_name_value" />

            <TextView
                android:id="@+id/textview_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/product_price_value_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_price_title" />

            <TextView
                android:id="@+id/textview_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/product_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
